# JWST_DataReductionWorkshop_Nov2025

./: .gitignore  MIRI_ESO484.py  NIRCam_ESO484.py  psf_cleaning.py  psf_cleaning_params.asdf
Notebooks/: PSF_Cleaning.ipynb
jwst_pipeline_poetry/: pyproject.toml  requirements.txt
